[gd_scene load_steps=4 format=3 uid="uid://dtryq13a8arut"]

[ext_resource type="Script" uid="uid://tkttni6g8m57" path="res://Scenes/card_template.gd" id="1_21nw4"]
[ext_resource type="Texture2D" uid="uid://b5apt7cr47747" path="res://icon.svg" id="2_pp2tr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dwaef"]
size = Vector2(132, 152)

[node name="VictimCardTemplate" type="Node2D" groups=["Cards"]]
script = ExtResource("1_21nw4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_dwaef")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -63.0
offset_top = 82.0
offset_right = -34.0
offset_bottom = 125.0
scale = Vector2(4.38139, -3.43546)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -64.0
offset_top = -66.0
offset_right = 64.0
offset_bottom = 62.0
scale = Vector2(1, 0.984375)
texture = ExtResource("2_pp2tr")
expand_mode = 1

[node name="Label" type="Label" parent="."]
offset_left = -60.0
offset_top = 60.0
offset_right = 62.0
offset_bottom = 83.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "efeasf"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
